--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
 
@@ -14,16 +14,13 @@ jobs:
         sudo apt-get install -yq
         python3-biopython
         python3-csb
+        python3-mdtraj
         python3-pip
         python3-pymol
-        python3-pyparsing
         python3-pytest
         python3-scipy
         apbs
         dssp
-
-    - name: Install pip dependencies
-      run: sudo python3 -m pip install -q mdtraj
 
     - name: Install stride
       run: |
