--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ repository = "https://github.com/speleo3/pymol-psico"
 [project.optional-dependencies]
 dev = [
     "pytest",
+    "ruff",
 ]
 extra = [
     "biopython",
@@ -34,6 +35,15 @@ version = {attr = "psico.__version__"}
 [tool.yapf]
 based_on_style = "pep8"
 allow_split_before_dict_value = false
+
+[tool.ruff]
+ignore = [
+    "E401",     # Multiple imports on one line
+    "E501",     # Line too long
+    "E701",     # Multiple statements on one line (colon)
+    "E731",     # lambda-assignment
+    "E722",     # FIXME Do not use bare `except`
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
