autopep8 (mostly whitespace)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,4 @@ jobs:
       run: python3 -m pytest -W ignore::DeprecationWarning -W ignore::PendingDeprecationWarning
 
     - name: Lint
-      run: ruff check psico
+      run: ruff check psico tests
