--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,10 +55,12 @@ select = [
 ]
 
 [tool.ruff]
+extend-select = ["W", "B", "Q003"]
 ignore = [
     "E401",     # Multiple imports on one line
     "E501",     # Line too long
     "E731",     # lambda-assignment
+    "B904",     # raise ... from None FIXME
 ]
 
 [tool.pytest.ini_options]
