Fix local_rms state arguments, add fitting tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         python3-scipy
         apbs
         dssp
+        tm-align
 
     - name: Install pip dependencies
       run: sudo python3 -m pip install -q ruff
