--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,11 @@
 channels:
   - conda-forge
-  - speleo3
-  - sbl
 dependencies:
   - apbs
   - biopython
-  - csb
+  - speleo3::csb
   - coverage
-  - dssp
+  - sbl::dssp
   - mdtraj
   - msms
   - pip
@@ -16,4 +14,4 @@ dependencies:
   - ruff
   - scipy
   - kimlab::stride
-  - tmalign
+  - speleo3::tmalign
