--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ testpaths = ["tests"]
 markers = [
     "exe: test requires third-party executable",
     "web: test requires internet access",
+    "rdkit: test requires RDKit",
 ]
 filterwarnings = [
     'ignore:.*xdrlib.*:DeprecationWarning:mdtraj.formats',
