--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ markers = [
     "exe: test requires third-party executable",
     "web: test requires internet access",
     "rdkit: test requires RDKit",
+    "openbabel: test requires Open Babel",
 ]
 filterwarnings = [
     'ignore:.*xdrlib.*:DeprecationWarning:mdtraj.formats',
