--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,8 @@ dependencies:
   - openbabel
   - pip
   - schrodinger::pymol >=2.5.6
+  - schrodinger::vtk-m 1.5.*
+  - python <3.12  # https://github.com/schrodinger/pymol-open-source/issues/320
   - pytest
   - qhull
   - rdkit
