--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: "v4.4.0"
+    rev: v6.0.0
     hooks:
     -   id: check-added-large-files
         args: ["--maxkb=250"]
@@ -9,11 +9,11 @@ repos:
     -   id: check-merge-conflict
     -   id: check-toml
     -   id: check-yaml
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: "v0.0.264"
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.15.1
   hooks:
-    - id: ruff
+    - id: ruff-check
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.4.1
+  rev: v1.19.1
   hooks:
     - id: mypy
